client/main.css
/* CSS declarations go here */
body {
    padding-top: 60px;
}

#Spinner {
    padding-top: 60px;
}

.navbar-default .navbar-nav > li > a.text-success {
    color: green;
}

.navbar-default .navbar-nav > li > a.text-danger {
    color: red;
}

.navbar-nav {
    margin: 0;
}

.navbar-nav > li > a {    
    padding-top: 15px;
    padding-bottom: 15px;
}

#login {
    padding-top: 8px;
    line-height: 20px;
}

#login .btn {
    background: none;
}

#playersTable .GK.selected, #playersTable .position.GK {
    background: #fff2cc;
}

#playersTable .DEF.selected, #playersTable .position.DEF {
    background: #f4cccc;
}

#playersTable .MID.selected, #playersTable .position.MID {
    background: #d9ead3;
}

#playersTable .FOR.selected, #playersTable .position.FOR {
    background: #c9daf8;
}

#playersTable .toggle-selection:hover, .toggleGameweekPlayers:hover {
    cursor: pointer;
}

.pointsBehind {
    font-size: 80%;
}

#resultsTable .fa-angle-up {
    color: green;
}

#resultsTable .fa-angle-down {
    color: red;
}

#gameweekEntryTable .gameweekPlayers {
    font-size: 80%;
}

#gameweekEntryTable .fa-check {
    color: green;
}

#gameweekEntryTable .fa-clock {
    color: red;
}

.playerInfo .fa-exclamation {
    color: orange;
}

.playerInfo .fa-exclamation-triangle {
    color: red;
}

.playerInfo:hover {
    text-decoration: none;
    cursor: pointer;
}

.playerInfoStatus {
    margin-right: 15px;
}

.playerInfoStatValue {
    font-weight: bold;
}

form#playerSearch {
    margin-bottom: 60px;
}

.form-control {
    width:auto;
    display:inline-block;
}

#transfer .selectPlayerButton span, #transfer .removePlayerOut span, #transfer .removePlayerIn span {
    float: right;
    padding: 3px;
}

table.cupFixtureMatches {
    table-layout: fixed;
}

td.no-wrap {
    white-space: nowrap;
}

td.home {
    text-align: right;
}

.cupFixtureMatches {
    margin: 0 !important;
    padding: 0 !important;
    border: 0 !important;
}

